--- a/style.css
+++ b/style.css
@@ -116,6 +116,12 @@ main{
     height: auto;
     margin-top: 50px;
     margin-bottom: 50px;
+
+    /*Propiedades de Flexbox*/
+    display: flex;
+    justify-content: space-evenly;
+
+
 }
 
 #contenedor .placa{
@@ -134,8 +140,65 @@ main{
 
 #p2{
     background-image: url(../img/aerolineas.jpg);
+    background-position: left -190px center !important;
 }
 
 #p3{
     background-image: url(../img/pax.jpg);
+    background-position: left -90px center !important;
 }
+.nombre{
+    width: 100%;
+    height: auto;
+}
+
+.nombre h3{
+    background-color: #003264;
+    color: white;
+    padding: 25px;
+    text-align: center;
+    font-size: 24px;
+    margin-top: 0;
+}
+
+iframe{
+    width: 92%;
+    height: 550px;
+    display: block;
+    margin: -20px auto 50px auto;
+    box-sizing: border-box;
+    border: 4px solid #003264;
+
+}
+
+#maps{
+    margin-top: 15px;
+}
+
+address{
+    font-size: 18px;
+    text-align: center;
+    font-style: normal;
+}
+
+footer{
+    height: 300px;
+}
+
+/*WhatsApp*/
+#ws{
+    width: 55px;
+    height: auto;
+    position: absolute;
+    right: 2%;
+    bottom: 20px;
+    z-index: 100;
+    position: fixed;
+    cursor: pointer;
+}
+
+#ws img{
+    width: 100%;
+    height: auto;
+}
+
